<resources>
    <string name="app_name">Memory Match Cards</string>
    <string name="version" translatable="false">v2.11.1, 2021 – 2026</string>
    <string name="position_tag" translatable="false">positionTag</string>
    <string name="number_of_turns_taken_text" translatable="false">100</string>
    <string name="turn">Turn&#160;</string>
    <string name="game_over">Game Over</string>
    <string name="default_turn_text">Turns Taken</string>
    <string name="new_game_text">New Game</string>
    <string name="created_by_text">Created by John Crawley</string>
    <string name="dismiss_about_button">OK!</string>
    <string name="button_8_cards_text">8 Cards</string>
    <string name="button_16_cards_text">16 Cards</string>
    <string name="button_26_cards_text">26 Cards</string>
    <string name="button_52_cards_text">52 Cards</string>
    <string name="game_complete_text">WELL DONE!</string>
    <string name="results_status_current_record">Current Record:&#160;</string>
    <string name="results_status_matching_record">Matching The Current Record!</string>
    <string name="results_status_new_record">Congratulations! A New Record!</string>
    <string name="results_status_turns_taken">&#160;turns taken</string>
    <string name="menu_action_new_game">New Game</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_settings">Settings</string>
    <string name="list_item_background_content_description">Background option</string>
    <string name="list_item_card_content_description">Card type option</string>
    <string name="card_face_style_settings">Card Face</string>
    <string name="card_back_style_settings">Card Back</string>
    <string name="background_style_settings">Background</string>
    <string name="button_options_about">About App</string>
    <string name="button_options_settings">Settings</string>
    <string name="button_options_new_game">New Game</string>
    <string name="options_button_content_description">Options</string>
    <string name="about_cards_text">Contains card graphics produced or derived from:
        https://totalnonsense.com/open-source-vector-playing-cards \n
    Copyright 2011,2021 – Chris Aguilar – conjurenation@gmail.com \n
    Licensed under: LGPL 3.0 – https://www.gnu.org/licenses/lgpl-3.0.html \n
        \n
        Cat and dog card faces generated using Mage Space, https://www.mage.space
    </string>
</resources>