<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_action_new_game"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_action_about"
        app:showAsAction="collapseActionView" />


    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_action_settings"
        app:showAsAction="collapseActionView" />

</menu>
