<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:gravity="center"
    android:background="@drawable/background_with_shadow"
    android:padding="@dimen/about_info_layout_padding"
    android:shadowColor="@color/default_color_primary"
    android:shadowDx="5"
    android:shadowDy="4"
    android:shadowRadius="2"
    android:orientation="vertical">

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:text="@string/button_options_new_game" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:text="@string/button_options_settings" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:text="@string/button_options_about" />
</LinearLayout>