<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    android:padding="@dimen/main_layout_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:padding="@dimen/card_layout_padding"
            app:layout_constraintTop_toBottomOf="@+id/numberOfTurnsTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/resultsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/background_with_shadow"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="5"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:padding="12dp"
        android:shadowColor="@color/default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/game_complete_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_complete_text"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="5"
            android:shadowDy="2"
            android:shadowDx="0"
            android:shadowColor="@color/game_complete_text_shadow_color"
            android:textColor="@color/game_complete_text_color"
            android:textSize="@dimen/game_complete_text_size"
            app:layout_constraintBottom_toTopOf="@+id/cardLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/finalNumberOfTurnsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_turn_text"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:shadowDx="3"
            android:shadowColor="@color/text_shadow_color"
            android:textColor="#7CB342"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/cardLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/currentRecordTurnsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_turn_text"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:shadowDx="3"
            android:shadowColor="@color/text_shadow_color"
            android:textColor="#7CB342"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/cardLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>





    <LinearLayout
        android:id="@+id/newGameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/background_with_shadow"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="5"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:padding="12dp"
        android:shadowColor="@color/default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/newGameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game_text"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:shadowDx="3"
            android:shadowColor="@color/text_shadow_color"
            android:textColor="#7CB342"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/cardLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cards8Button"
            android:backgroundTint="@color/button_tint"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@string/button_8_cards_text"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cards16Button"
            android:backgroundTint="@color/button_tint"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@string/button_16_cards_text"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/cards26Button"
            android:backgroundTint="@color/button_tint"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@string/button_26_cards_text"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/cards52Button"
            android:backgroundTint="@color/button_tint"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@string/button_52_cards_text"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/aboutLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/background_with_shadow"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="5"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:padding="12dp"
        android:shadowColor="@color/default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:shadowDx="3"
            android:shadowColor="@color/text_shadow_color"
            android:textColor="#7CB342"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/cardLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/dismissAboutButton"
            android:backgroundTint="@color/button_tint"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@string/dismiss_about_button"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>