<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resultsLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:visibility="gone"
    android:background="@drawable/background_with_shadow"
    android:shadowDx="5"
    android:shadowDy="4"
    android:shadowRadius="2"
    android:padding="@dimen/_12sdp"
    android:shadowColor="@color/default_color_primary"
    android:orientation="vertical">


    <TextView
        android:id="@+id/game_complete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_complete_text"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textAlignment="center"
        android:shadowRadius="5"
        android:shadowDy="2"
        android:shadowDx="0"
        android:shadowColor="@color/game_complete_text_shadow_color"
        android:textColor="@color/game_complete_text_color"
        android:textSize="@dimen/game_complete_text_size" />

    <TextView
        android:id="@+id/numberOfTurnsTakenTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_turns_taken_text"
        android:textAlignment="center"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:shadowRadius="3"
        android:shadowDy="3"
        android:shadowDx="3"
        android:shadowColor="@color/text_shadow_color"
        android:textColor="@color/number_of_turns_taken_text"
        android:textSize="@dimen/results_number_of_turns_taken_text"/>

    <TextView
        android:id="@+id/turnsTakenTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_turn_text"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textAlignment="center"
        android:shadowRadius="3"
        android:shadowDy="3"
        android:shadowDx="3"
        android:shadowColor="@color/text_shadow_color"
        android:textColor="@color/number_of_turns_taken_text"
        android:textSize="@dimen/created_by_text_size"/>


    <TextView
        android:id="@+id/currentRecordTurnsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_turn_text"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingTop="@dimen/_14sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:shadowRadius="3"
        android:textAlignment="center"
        android:shadowDy="3"
        android:shadowDx="3"
        android:shadowColor="@color/text_shadow_color"
        android:textColor="#7CB342"
        android:textSize="@dimen/results_current_record_text" />

</LinearLayout>

