<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsLayoutConstraint"
    android:visibility="gone"
    android:background="@drawable/background_with_shadow"
    android:shadowDx="5"
    android:shadowDy="4"
    android:shadowRadius="2"
    android:padding="12dp"
    android:shadowColor="@color/default_color_primary">


        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_action_settings"
            android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
            android:paddingBottom="@dimen/turns_text_padding_bottom"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:shadowDx="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:shadowColor="@color/text_shadow_color"
            android:textColor="@color/about_game_title_text"

            android:textAlignment="center"
            android:textSize="@dimen/about_game_text_size" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintBottom_toTopOf="@+id/dismissSettingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardFaceStyleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
                android:paddingTop="@dimen/version_padding_top"
                android:paddingBottom="4dp"
                android:shadowColor="@color/text_shadow_color"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/card_face_style_settings"
                android:textAlignment="viewStart"
                android:textColor="@color/about_game_title_text"
                android:textSize="@dimen/version_text_size" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:paddingStart="0dp"
                android:paddingEnd="36dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardTypeRecycleView"
                app:layout_constraintBottom_toTopOf="@+id/playButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recycler_view_margin"
                android:fadeScrollbars="true"
                android:orientation="horizontal" />


            <TextView
                android:id="@+id/cardBackStyleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="@dimen/turns_text_padding_horizontal"
                android:paddingTop="@dimen/version_padding_top"
                android:paddingBottom="4dp"
                android:shadowColor="@color/text_shadow_color"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/card_back_style_settings"
                android:textAlignment="viewStart"
                android:textColor="@color/about_game_title_text"
                android:textSize="@dimen/version_text_size" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/cardBackdivider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:paddingStart="0dp"
                android:paddingEnd="36dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardBackRecycleView"
                app:layout_constraintBottom_toTopOf="@+id/playButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recycler_view_margin"
                android:fadeScrollbars="true"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

        <Button
            android:id="@+id/dismissSettingsButton"
            android:textColor="@color/button_text"
            android:layout_width="match_parent"
            android:text="@android:string/ok"
            android:paddingHorizontal="@dimen/about_game_ok_button_horizontal_padding"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>